--- a/src/main/resources/com/example/hello-view.fxml
+++ b/src/main/resources/com/example/hello-view.fxml
@@ -12,6 +12,6 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <Button text="Execute Javascript (Call from JavaFX)" fx:id="changeColor" onAction="#changeColorFunction"/>
+<!--    <Button text="Execute Javascript (Call from JavaFX)" fx:id="changeColor" onAction="#changeColorFunction"/>-->
     <WebView fx:id="learningUnit"/>
 </VBox>
