--- a/src/main/resources/com/example/hello-view.fxml
+++ b/src/main/resources/com/example/hello-view.fxml
@@ -6,12 +6,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.web.WebView?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.HelloController">
-<!--    <padding>-->
-<!--        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>-->
-<!--    </padding>-->
 
-<!--    <Button text="Execute Javascript (Call from JavaFX)" fx:id="changeColor" onAction="#changeColorFunction"/>-->
-    <WebView fx:id="learningUnit"/>
-</VBox>
+<WebView  xmlns:fx="http://javafx.com/fxml"
+          fx:controller="com.example.HelloController" fx:id="learningUnit"/>
