--- a/src/main/resources/com/example/hello-view.fxml
+++ b/src/main/resources/com/example/hello-view.fxml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.web.WebView?>
+<?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.StackPane?>
 
-<WebView  xmlns:fx="http://javafx.com/fxml"
-          fx:controller="com.example.HelloController" fx:id="learningUnit"/>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.FlowPane?>
+<FlowPane orientation="VERTICAL" style="-fx-background-color: red" xmlns:fx="http://javafx.com/fxml"
+          fx:controller="com.example.HelloController">
+    <WebView minWidth="-Infinity" fx:id="learningUnit"/>
+    <HBox alignment="BOTTOM_CENTER" style="-fx-background-color: black">
+        <Button fx:id="getSections" onAction="#getSections">Sections</Button>
+    </HBox>
+</FlowPane>
