--- a/src/main/resources/css/learningUnit.css
+++ b/src/main/resources/css/learningUnit.css
@@ -13,7 +13,6 @@
     padding: 15px;
     font-size: 1.5em;
     font-family: 'Optima', cursive;
-    display: flex;
 }
 
 .task{
@@ -108,6 +107,10 @@ input[type=submit]:hover {
 
 .wrap-figure {
     float: right;
+}
+
+.wrap-text {
+    display: flex;
 }
 .chapter{
 
