--- a/src/main/resources/css/fxmlStyle.css
+++ b/src/main/resources/css/fxmlStyle.css
@@ -5,9 +5,17 @@
     -fx-background-insets: 5px;
     -fx-background-color: DodgerBlue;
     -fx-background-radius: 20px;
-    -fx-effect: DropShadow(gaussian, #D3D3D3,10,0.1,0,5);
+    -fx-effect: DropShadow(gaussian, #D3D3D3,10,0.5,0,5);
     -fx-text-fill: white;
 }
+.bottom-nav-button:hover {
+    -fx-background-color: #0066cc;
+}
+.bottom-nav-button:pressed {
+    -fx-translate-y: 3;
+    -fx-effect: DropShadow(gaussian, #666,1,1,0,2);
+}
+
 .bottom-nav {
     -fx-background-color: white;
     -fx-border-color: black;
