--- a/src/main/resources/css/learningUnit.css
+++ b/src/main/resources/css/learningUnit.css
@@ -21,9 +21,8 @@ body {
 }
 
 .task {
-    width: 100%;
+    width: 98%;
     padding: 10px;
-    margin-left: 10px;
     text-align: justify;
     font-size: 1.2em;
     font-family: 'Optima', cursive;
@@ -32,6 +31,18 @@ body {
     background-color: #D3D3D3;
     border-width: 2px;
     border-radius: 7px;
+}
+
+textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 16px;
+    resize: none;
 }
 
 .task-image {
