--- a/src/main/resources/css/learningUnit.css
+++ b/src/main/resources/css/learningUnit.css
@@ -174,3 +174,11 @@ table {
 }
 
 /*endregion*/
+
+.watermark{
+    background-image: url("../testImages/Auge_Wattermark Kopie.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    backface-visibility: inherit;
+    background-size: 45%;
+}
