--- a/src/main/resources/css/learningUnit.css
+++ b/src/main/resources/css/learningUnit.css
@@ -176,7 +176,7 @@ table {
 /*endregion*/
 
 .watermark{
-    background-image: url("../testImages/Auge_Wattermark.png");
+    background-image: url("../testImages/Auge_Wattermark Kopie.png");
     background-repeat: no-repeat;
     background-position: center;
     backface-visibility: inherit;
