- Auge jetzt mit Target

--- a/src/main/resources/css/learningUnit.css
+++ b/src/main/resources/css/learningUnit.css
@@ -175,6 +175,13 @@ table {
 
 /*endregion*/
 
+.diashow-image {
+    float: right;
+}
+
+.diashow-target{
+    display: none;
+}
 .watermark{
     background-image: url("../testImages/Auge_Wattermark Kopie.png");
     background-repeat: no-repeat;
