--- a/src/main/resources/css/learningUnit.css
+++ b/src/main/resources/css/learningUnit.css
@@ -181,5 +181,5 @@ table {
     background-repeat: no-repeat;
     background-position: center;
     backface-visibility: inherit;
-    background-size: 45%;
+    background-size: 500px;
 }
