HelloController.java: - renamed everything related to sections into container - splitted old getSectionsFromDocument() into getContainerFromDocument() and createArrayFromJSObject() - expanded logic based on having multiple container typed (section and information) - new support function List<String> getClasses(element): returns a List of classes from the element - new support functions disableElement(element) and enableElement(element): set the Style of the given element to be displayed or not example.html: - renamed function to fit naming - added clearfix class div to properly display the diashow learningUnit.css: - added clearfix and clearfix:after to properly display diashow

--- a/src/main/resources/css/learningUnit.css
+++ b/src/main/resources/css/learningUnit.css
@@ -172,7 +172,6 @@ table {
 .diashow-image {
     float: right;
 }
-
 .diashow-target{
     display: none;
 }
@@ -182,4 +181,13 @@ table {
     background-position: center;
     backface-visibility: inherit;
     background-size: 45%;
+}
+
+.clearfix {
+    overflow: auto;
+}
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
 }
