--- a/src/main/resources/css/learningUnit.css
+++ b/src/main/resources/css/learningUnit.css
@@ -237,3 +237,8 @@ input[type=submit]:hover {
     align-content: center;
     padding: .5% .5% .5% .5%;
 }
+
+.task-icon {
+    max-height: 3%;
+    max-width: 3%;
+}
