--- a/src/main/resources/de/bale/ui/hello-view.fxml
+++ b/src/main/resources/de/bale/ui/hello-view.fxml
@@ -7,7 +7,7 @@
 
 <?import java.lang.String?>
 <GridPane xmlns:fx="http://javafx.com/fxml"
-          fx:controller="de.bale.ui.HelloController" stylesheets="@../../css/fxmlStyle.css">
+          fx:controller="de.bale.ui.LearningUnitModel" stylesheets="@../../../css/fxmlStyle.css">
     <columnConstraints>
         <ColumnConstraints percentWidth="100"/>
     </columnConstraints>
