--- a/src/main/resources/css/learningUnit.css
+++ b/src/main/resources/css/learningUnit.css
@@ -188,6 +188,7 @@ input[type=submit]:hover {
 .clearfix {
     overflow: auto;
 }
+
 .clearfix::after {
     content: "";
     clear: both;
@@ -209,9 +210,11 @@ input[type=submit]:hover {
     border-radius: 10px;
     box-shadow: 0 5px #D3D3D3;
 }
+
 .nav-button:hover {
     background-color: #0066cc
 }
+
 .nav-button:active {
     /*background-color: #3e8e41;*/
     box-shadow: 0 3px #666;
@@ -244,6 +247,15 @@ input[type=submit]:hover {
     max-width: 5vw;
 }
 
-.chapter-select {
-    background-color: red;
+#chapter-parent {
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+#chapter-select {
+    position: fixed;
+    border: solid black;
+    border-radius: 10px;
 }
