--- a/src/main/resources/css/learningUnit.css
+++ b/src/main/resources/css/learningUnit.css
@@ -223,7 +223,8 @@ input[type=submit]:hover {
 
 .preamble {
     position: absolute;
-    width: 80%;
+    left:0;
+    width: 98vw;
     height: 100%;
     background-color: white;
     display: flex;
