- Removed IController.java - Moved LearningUnitModel.java and LearningUnitController.java and Interfaces to a new package - Added Startscreen functions (WIP)

--- a/src/main/resources/css/fxmlStyle.css
+++ b/src/main/resources/css/fxmlStyle.css
@@ -20,3 +20,8 @@
     -fx-background-color: white;
     -fx-border-color: black;
 }
+
+.select-table {
+    -fx-pref-width: infinity;
+    -fx-pref-height: 80%;
+}
