--- a/src/main/resources/de/bale/ui/learningUnit/learningUnit.fxml
+++ b/src/main/resources/de/bale/ui/learningUnit/learningUnit.fxml
@@ -6,7 +6,7 @@
 
 
 <?import java.lang.String?>
-<GridPane xmlns:fx="http://javafx.com/fxml" stylesheets="@../../../css/fxmlStyle.css">
+<GridPane xmlns:fx="http://javafx.com/fxml" stylesheets="@../../../../css/fxmlStyle.css">
     <columnConstraints>
         <ColumnConstraints percentWidth="100"/>
     </columnConstraints>
