--- a/src/main/resources/de/bale/ui/learningUnit/learningUnit.fxml
+++ b/src/main/resources/de/bale/ui/learningUnit/learningUnit.fxml
@@ -19,7 +19,7 @@
         <Button styleClass="bottom-nav-button" fx:id="nextButton" onMousePressed="#displayNextSection" disable="true">
             Weiter
         </Button>
-        <Button styleClass="bottom-nav-button" fx:id="closeButton" onMousePressed="#closeApp">BEENDEN (TEMPORÄR)</Button>
+        <Button styleClass="bottom-nav-button" fx:id="closeButton" onMousePressed="#closeApp">Beenden (TEMPORÄR)</Button>
         <Button styleClass="bottom-nav-button" fx:id="scrollDownButton" onMousePressed="#scrollToBottom">Nach unten</Button>
     </HBox>
 </GridPane>
