- Added Change Language Button - Made Localizations use non-Static Method

--- a/src/main/resources/de/bale/ui/startscreen/startScreen.fxml
+++ b/src/main/resources/de/bale/ui/startscreen/startScreen.fxml
@@ -25,5 +25,6 @@
     <HBox GridPane.columnIndex="0" GridPane.rowIndex="1" alignment="CENTER" styleClass="bottom-nav">
         <Button styleClass="bottom-nav-button" fx:id="openLearningUnitButton" onMousePressed="#openLearningUnit">Öffnen
         </Button>
+        <Button styleClass="bottom-nav-button" fx:id="changeLanguageButton" onMousePressed="#changeLanguage">English</Button>
     </HBox>
 </GridPane>
