--- a/Lerneinheit/css/learningUnit.css
+++ b/Lerneinheit/css/learningUnit.css
@@ -16,19 +16,19 @@ body {
 .text {
     text-align: justify;
     padding: 15px;
-    font-size: 1.5em;
-    font-family: 'Optima', cursive;
+    font-size: var(--textFontSize);
+    font-family: var(--textFontFamily);
 }
 
 .task {
     width: 98%;
     padding: 10px;
     text-align: justify;
-    font-size: 1.2em;
-    font-family: 'Optima', cursive;
+    font-size: var(--taskFontSize);
+    font-family: var(--textFontFamily);
     border-style: double;
-    border-color: #cccccc;
-    background-color: #D3D3D3;
+    border-color: var(--taskBorderColor);
+    background-color: var(--taskBackgroundColor);
     border-width: 2px;
     border-radius: 7px;
 }
@@ -40,16 +40,16 @@ textarea {
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
-    background-color: #f8f8f8;
-    font-size: 16px;
+    background-color: var(--textAreaBackgroundColor);
+    font-size: var(--textAreaFontSize);
     resize: none;
 }
 
 .information {
     width: 100%;
-    background-color: #ffe4b5;
+    background-color: var(--informationBackgroundColor);
     border-style: solid;
-    border-color: darkgreen;
+    border-color: var(--informationBorderColor);
     border-width: 2px;
     border-radius: 7px;
     padding: 5px;
@@ -59,20 +59,20 @@ textarea {
     display: inline-block;
     padding: 5px 15px;
     margin: 10px;
-    font-size: 14px;
+    font-size: var(--readingFontSize);
     cursor: pointer;
     text-align: center;
     text-decoration: none;
     outline: none;
-    color: #fff;
-    background-color: DodgerBlue;
+    color: var(--mainButtonTextColor);
+    background-color: var(--mainButtonBackgroundColor);
     border: none;
     border-radius: 10px;
     box-shadow: 0 5px #D3D3D3;
 }
 
 .reading:hover {
-    background-color: #0066cc
+    background-color: var(--mainButtonHovorColor)
 }
 
 .reading:active {
@@ -92,9 +92,9 @@ input[type=text], select {
 
 input[type=submit] {
     width: 30%;
-    font-size: 20px;
-    background-color: DodgerBlue;
-    color: white;
+    font-size: var(--saveFontSize);
+    background-color: var(--mainButtonBackgroundColor);
+    color: var(--mainButtonTextColor);
     padding: 14px 20px;
     margin-left: 10px;
     border: none;
@@ -103,7 +103,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    background-color: #0066cc;
+    background-color: var(--mainButtonHovorColor);
 }
 
 .submit:active {
@@ -135,9 +135,8 @@ input[type=submit]:hover {
     vertical-align: bottom;
 }
 
-.chapter {
+.chapter {}
 
-}
 
 /*region Make Sections Visible...*/
 
@@ -192,25 +191,25 @@ input[type=submit]:hover {
     display: inline-block;
     padding: 5px 15px;
     margin: 10px;
-    font-size: 14px;
+    font-size: var(--navButtonFontSize);
+
     cursor: pointer;
     text-align: center;
     text-decoration: none;
     outline: none;
-    color: #fff;
-    background-color: DodgerBlue;
+    color: var(--mainButtonTextColor);
+    background-color: var(--mainButtonBackgroundColor);
     border: none;
     border-radius: 10px;
-    box-shadow: 0 5px #D3D3D3;
+    box-shadow: 0 5px var(--mainButtonShadowColor);
 }
 
 .nav-button:hover {
-    background-color: #0066cc
+    background-color: var(--mainButtonHovorColor)
 }
 
 .nav-button:active {
-    /*background-color: #3e8e41;*/
-    box-shadow: 0 3px #666;
+    box-shadow: 0 3px var(--mainButtonShadowColor);
     transform: translateY(2px);;
 }
 
@@ -219,19 +218,19 @@ input[type=submit]:hover {
     left:0;
     width: 98vw;
     height: 100%;
-    background-color: white;
+    background-color: var(--preambleBackgroundColor);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .draggable-card {
-    background-color: darkblue;
-    color: white;
+    background-color: var(--dragableCardBackgroundColor);
+    color: var(--mainButtonTextColor);
     display: inline-block;
     margin: 1px 1px 1px 1px;
     border-radius: 5px;
-    font-size: 30px;
+    font-size: var(--dragableCardFontSize);
     align-content: center;
     padding: .5% .5% .5% .5%;
 }
@@ -239,7 +238,7 @@ input[type=submit]:hover {
 .drop-field {
     float: left;
     align-content: center;
-    font-size: 35px;
+    font-size: var(--dragableFieldFontSize);
     width: 200px;
     height: 45px;
     padding: 8px;
@@ -291,26 +290,26 @@ input[type=submit]:hover {
     width: 8vw !important;
     border-right: solid black;
     text-align: center;
-    font-size: 1.3em;
+    font-size: var(--chapterSelectFontSize);
     padding: 2vh;
 }
 
 #chapter-select a:link {
-    color: blue;
+    color: var(--chapterSelectFontColor);
     text-decoration: none;
 }
 
 #chapter-select a:visited {
-    color: blue;
+    color: var(--chapterSelectFontColor);
     text-decoration: none;
 }
 
 #chapter-select a:hover {
-    color: blue;
+    color: var(--chapterSelectFontColor);
     text-decoration: none;
 }
 
 #chapter-select a:active {
-    color: blue;
+    color: var(--chapterSelectFontColor);
     text-decoration: none;
 }
