--- a/src/main/resources/css/fxmlStyle.css
+++ b/src/main/resources/css/fxmlStyle.css
@@ -3,22 +3,22 @@
     -fx-padding: 0.3em 1em 0.3em 1em;
     -fx-border-insets: 5px;
     -fx-background-insets: 5px;
-    -fx-background-color: DodgerBlue;
+    -fx-background-color: -fx-mainButtonBackgroundColor;
     -fx-background-radius: 20px;
-    -fx-effect: DropShadow(gaussian, #D3D3D3,10,0.5,0,5);
-    -fx-text-fill: white;
+    -fx-effect: DropShadow(gaussian, -fx-mainButtonShadowColor,10,0.5,0,5);
+    -fx-text-fill: -fx-mainButtonTextColor;
 }
 .bottom-nav-button:hover {
-    -fx-background-color: #0066cc;
+    -fx-background-color: -fx-mainButtonHovorColor;
 }
 .bottom-nav-button:pressed {
     -fx-translate-y: 3;
-    -fx-effect: DropShadow(gaussian, #666,1,1,0,2);
+    -fx-effect: DropShadow(gaussian, -fx-mainButtonShadowColor,1,1,0,2);
 }
 
 .bottom-nav {
-    -fx-background-color: white;
-    -fx-border-color: black;
+    -fx-background-color: -fx-backgroundColor;
+    -fx-border-color: -fx-taskBorderColor;
 }
 
 .select-table {
