--- a/src/main/resources/de/bale/ui/learningUnit/learningUnit.fxml
+++ b/src/main/resources/de/bale/ui/learningUnit/learningUnit.fxml
@@ -3,10 +3,10 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.web.WebView?>
+<?import java.net.URL?>
 
+<GridPane xmlns:fx="http://javafx.com/fxml" stylesheets="@../../../../css/darcula.css, @../../../../css/fxmlStyle.css">
 
-<?import java.lang.String?>
-<GridPane xmlns:fx="http://javafx.com/fxml" stylesheets="@../../../../css/fxmlStyle.css">
     <columnConstraints>
         <ColumnConstraints percentWidth="100"/>
     </columnConstraints>
