--- a/Lerneinheit/css/learningUnit.css
+++ b/Lerneinheit/css/learningUnit.css
@@ -135,6 +135,7 @@ input[type=submit]:hover {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: -40px;
 }
 
 .forest-text {
