- Added Settings Scene - Functioniality WIP

--- a/src/main/resources/de/bale/ui/startscreen/startScreen.fxml
+++ b/src/main/resources/de/bale/ui/startscreen/startScreen.fxml
@@ -26,5 +26,6 @@
         <Button styleClass="bottom-nav-button" fx:id="openLearningUnitButton" onMousePressed="#openLearningUnit">Öffnen
         </Button>
         <Button styleClass="bottom-nav-button" fx:id="changeLanguageButton" onMousePressed="#changeLanguage">English</Button>
+        <Button styleClass="bottom-nav-button" fx:id="openSettingsButton" onMousePressed="#openSettings">Einstellungen</Button>
     </HBox>
 </GridPane>
