--- a/src/main/resources/de/bale/settings/settings.fxml
+++ b/src/main/resources/de/bale/settings/settings.fxml
@@ -20,6 +20,13 @@
 
     <Label GridPane.columnIndex="0" fx:id="languageLabel">Sprache:</Label>
     <ComboBox GridPane.columnIndex="1" fx:id="languageComboBox"/>
-    <Button styleClass="bottom-nav-button" GridPane.rowIndex="1" GridPane.columnIndex="0" fx:id="saveButton" onMousePressed="#saveSettings"/>
-    <Button styleClass="bottom-nav-button" GridPane.rowIndex="1" GridPane.columnIndex="1" fx:id="openStartScreenButton" onMousePressed="#openStartScreen"/>
+    <Label GridPane.columnIndex="0" GridPane.rowIndex="1" fx:id="themeLabel">Thema:
+    </Label>
+    <ComboBox GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="themeCombobox"/>
+    <Button styleClass="bottom-nav-button" GridPane.rowIndex="2" GridPane.columnIndex="0" fx:id="saveButton"
+            onMousePressed="#saveSettings"/>
+    <Button styleClass="bottom-nav-button" GridPane.rowIndex="2" GridPane.columnIndex="1" fx:id="openStartScreenButton"
+            onMousePressed="#openStartScreen"/>
+
+
 </GridPane>
