--- a/Lerneinheit/css/learningUnit.css
+++ b/Lerneinheit/css/learningUnit.css
@@ -349,3 +349,102 @@ input[type=submit]:hover {
     color: blue;
     text-decoration: none;
 }
+
+.dropdown {
+    position: relative;
+    width: 390px;
+    height: 45px;
+}
+
+#dropdown-1 {
+    transform: rotate(8deg);
+    margin: 20px;
+    left: 340px;
+    top: 145px;
+}
+
+#dropdown-2 {
+    transform: rotate(-8deg);
+    margin: 20px;
+    left: 340px;
+    top: 220px;
+}
+
+.dropdown::before {
+    content: "";
+    position: absolute;
+    top: 15px;
+    right: 20px;
+    z-index: 1000;
+    width: 8px;
+    height: 8px;
+    border: 2px solid #333;
+    border-top: 2px solid #fff;
+    border-right: 2px solid #fff;
+    transform: rotate(-45deg);
+    transition: 0.5s;
+    pointer-events: none;
+}
+
+.dropdown.active::before {
+    top: 22px;
+    transform: rotate(-225deg);
+}
+
+.dropdown input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    background: #fff;
+    font-size: 1.2em;
+    border: none;
+    outline: none;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+    padding: 12px 20px;
+    border-radius: 10px;
+}
+
+.dropdown .options {
+    position: absolute;
+    top: 70px;
+    width: 60%;
+    background: #fff;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+    border-radius: 10px;
+    overflow: hidden;
+    display: none;
+}
+
+.dropdown.active .options {
+    display: block;
+}
+
+.dropdown .options div {
+    padding: 12px 20px;
+    cursor: pointer;
+}
+
+.dropdown .options div:hover {
+    background: #62baea;
+    color: #fff;
+}
+
+.tim-flashlight {
+    float: left;
+    height: 350px;
+    margin-top: 50px;
+    margin-left: 80px;
+}
+
+.door {
+    float: right;
+    height: 250px;
+    margin-right: 130px;
+}
+
+.task-img {
+    height: 450px;
+}
