--- a/Lerneinheit/css/learningUnit.css
+++ b/Lerneinheit/css/learningUnit.css
@@ -455,3 +455,67 @@ input[type=submit]:hover {
 .task-img {
     height: 450px;
 }
+
+.demo-video {
+    position: absolute;
+    float: left;
+    margin: 100px 0 0 12px;
+    padding: 5px 15px;
+    font-size: 14px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: DodgerBlue;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 5px #D3D3D3;
+}
+
+.demo-video:hover {
+    background-color: #0066cc
+}
+
+.demo-video:active {
+    box-shadow: 0 3px #666;
+    transform: translateY(2px);
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.close {
+    position: absolute;
+    color: #000;
+    font-size: 38px;
+    font-weight: bold;
+    top: 100px;
+    right: 310px;
+}
+
+.close:hover,
+.close:focus {
+    color: rgba(0,0,0,0.4);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.video {
+    display: block;
+    width: 60%;
+    height: 60%;
+    margin-right: auto;
+    margin-left: auto;
+}
